[gd_scene load_steps=3 format=2]

[ext_resource path="res://rsc/registration_panel/registration_panel.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.336304, 0.336304, 0.371094, 1 )
expand_margin_left = 20.0
expand_margin_right = 20.0
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[node name="registration_panel" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -291.0
margin_top = -301.0
margin_right = 291.0
margin_bottom = 301.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_right = 200.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="container"]
margin_top = 33.0
margin_right = 400.0
margin_bottom = 47.0
custom_styles/normal = SubResource( 1 )
text = "REGISTRATION SYSTEM"
align = 1
autowrap = true
uppercase = true

[node name="user_txt" type="LineEdit" parent="container"]
margin_top = 97.0
margin_right = 400.0
margin_bottom = 147.0
rect_min_size = Vector2( 400, 50 )
max_length = 46
clear_button_enabled = true
placeholder_text = "User"
caret_blink = true

[node name="password_txt" type="LineEdit" parent="container"]
margin_top = 197.0
margin_right = 400.0
margin_bottom = 247.0
rect_min_size = Vector2( 400, 50 )
max_length = 46
clear_button_enabled = true
placeholder_text = "Password"
caret_blink = true

[node name="enter" type="Button" parent="container"]
margin_top = 297.0
margin_right = 400.0
margin_bottom = 367.0
rect_min_size = Vector2( 0, 70 )
text = "Enter"

[node name="manage_users" type="Button" parent="container"]
margin_top = 417.0
margin_right = 400.0
margin_bottom = 487.0
rect_min_size = Vector2( 0, 70 )
text = "Manage users"

[node name="warning" type="Label" parent="container"]
margin_top = 537.0
margin_right = 400.0
margin_bottom = 568.0
text = "*Once you have created the user, you will not be able to change it"
align = 1
valign = 1
autowrap = true

[connection signal="text_entered" from="container/user_txt" to="." method="_on_user_txt_text_entered"]
[connection signal="text_entered" from="container/password_txt" to="." method="_on_password_txt_text_entered"]
[connection signal="pressed" from="container/enter" to="." method="_on_enter_pressed"]
[connection signal="pressed" from="container/manage_users" to="." method="_on_manage_users_pressed"]
